--- a/package.json
+++ b/package.json
@@ -38,10 +38,12 @@
     "react-native-web": "~0.21.0"
   },
   "devDependencies": {
+    "@biomejs/biome": "^2.2.4",
     "@types/react": "~19.1.0",
-    "typescript": "~5.9.2",
     "eslint": "^9.25.0",
-    "eslint-config-expo": "~10.0.0"
+    "eslint-config-biome": "^2.1.3",
+    "eslint-config-expo": "~10.0.0",
+    "typescript": "~5.9.2"
   },
   "private": true
 }
