feat: Complete Bible Reading Mobile Interface Implementation
This commit delivers a complete mobile-first Bible reading interface with navigation, multiple reading modes, progress tracking, and offline support. All 10 task groups from the spec have been implemented and verified.

## Features Implemented

### Navigation System
- iOS-style bottom sheet modal with testament/book/chapter selection
- Testament tabs (Old Testament, New Testament)
- Recent books tracking (max 5) with clock icon indicators
- Real-time book filter/search
- 5-column responsive chapter grid
- Current chapter highlighting and breadcrumb display
- Swipe-to-dismiss gesture

### Chapter Reading Interface
- Fixed header with book/chapter title and action icons
- Three content tabs (Summary, By Line, Detailed) with persistence
- Chapter content with sections, subtitles, verse numbers
- Markdown rendering for AI-generated explanations
- Floating prev/next chapter navigation buttons
- Swipe gestures for chapter navigation (left/right)
- Progress bar showing book completion percentage

### Supporting Features
- Hamburger menu (placeholder with "Coming soon" alerts)
- Offline indicator (subtle header icon)
- Deep linking support (`versemate://bible/[bookId]/[chapter]`)
- Reading position persistence with AsyncStorage
- Haptic feedback on interactions
- Loading states with shimmer skeleton loaders
- Error handling with user-friendly messages

## Technical Implementation

### Components Created (8)
- BibleNavigationModal.tsx - Full navigation modal
- ChapterContentTabs.tsx - Reading mode tabs
- ChapterReader.tsx - Chapter content renderer
- FloatingActionButtons.tsx - Chapter navigation buttons
- ProgressBar.tsx - Book completion indicator
- SkeletonLoader.tsx - Loading state component
- HamburgerMenu.tsx - Side menu (placeholder)
- OfflineIndicator.tsx - Network status indicator

### Hooks Implemented (6)
- use-active-tab.ts - Tab state persistence
- use-recent-books.ts - Recent books tracking
- use-book

--- a/app.json
+++ b/app.json
@@ -5,11 +5,12 @@
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "versematemobile",
+    "scheme": "versemate",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "associatedDomains": ["applinks:app.versemate.org"]
     },
     "android": {
       "adaptiveIcon": {
@@ -19,7 +20,21 @@
         "monochromeImage": "./assets/images/android-icon-monochrome.png"
       },
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "predictiveBackGestureEnabled": false,
+      "intentFilters": [
+        {
+          "action": "VIEW",
+          "autoVerify": true,
+          "data": [
+            {
+              "scheme": "https",
+              "host": "app.versemate.org",
+              "pathPrefix": "/bible"
+            }
+          ],
+          "category": ["BROWSABLE", "DEFAULT"]
+        }
+      ]
     },
     "web": {
       "output": "static",
