--- a/agent-os/config.yml
+++ b/agent-os/config.yml
@@ -1,6 +1,13 @@
-version: 2.0.3
-last_compiled: 2025-10-15 14:54:53
+version: 2.1.0
+last_compiled: 2025-10-22 21:17:29
+
+# ================================================
+# Compiled with the following settings:
+#
+# To change these settings, run ~/agent-os/scripts/project-update.sh to re-compile your project with the new settings.
+# ================================================
 profile: default
-multi_agent_mode: true
-multi_agent_tool: claude-code
-single_agent_mode: false
+claude_code_commands: true
+use_claude_code_subagents: true
+agent_os_commands: false
+standards_as_claude_code_skills: true
