--- a/eas.json
+++ b/eas.json
@@ -36,7 +36,7 @@
         "buildConfiguration": "Release"
       },
       "android": {
-        "buildType": "aab",
+        "buildType": "app-bundle",
         "gradleCommand": ":app:bundleRelease"
       },
       "env": {
