chore: add iOS encryption declaration and app version source
- Add ITSAppUsesNonExemptEncryption: false to iOS infoPlist
- Add cli.appVersionSource: remote to eas.json
- Install expo-dev-client for development builds
- Address EAS Build validation warnings

--- a/app.json
+++ b/app.json
@@ -14,7 +14,10 @@
       "supportsTablet": true,
       "associatedDomains": [
         "applinks:app.versemate.org"
-      ]
+      ],
+      "infoPlist": {
+        "ITSAppUsesNonExemptEncryption": false
+      }
     },
     "android": {
       "package": "org.versemate.mobile",
