--- a/eas.json
+++ b/eas.json
@@ -15,7 +15,7 @@
       }
     },
     "preview": {
-      "distribution": "internal",
+      "distribution": "store",
       "channel": "preview",
       "ios": {
         "simulator": false,
@@ -50,7 +50,10 @@
       "ios": {
         "appleId": "${APPLE_ID}",
         "ascAppId": "${ASC_APP_ID}",
-        "appleTeamId": "${APPLE_TEAM_ID}"
+        "appleTeamId": "${APPLE_TEAM_ID}",
+        "ascApiKeyContent": "${APPLE_API_KEY}",
+        "ascApiKeyIssuerId": "${APPLE_API_ISSUER_ID}",
+        "ascApiKeyId": "${APPLE_API_KEY_ID}"
       },
       "android": {
         "serviceAccountKeyPath": "${GOOGLE_SERVICE_ACCOUNT_KEY_PATH}",
@@ -61,7 +64,10 @@
       "ios": {
         "appleId": "${APPLE_ID}",
         "ascAppId": "${ASC_APP_ID}",
-        "appleTeamId": "${APPLE_TEAM_ID}"
+        "appleTeamId": "${APPLE_TEAM_ID}",
+        "ascApiKeyContent": "${APPLE_API_KEY}",
+        "ascApiKeyIssuerId": "${APPLE_API_ISSUER_ID}",
+        "ascApiKeyId": "${APPLE_API_KEY_ID}"
       },
       "android": {
         "serviceAccountKeyPath": "${GOOGLE_SERVICE_ACCOUNT_KEY_PATH}",
