chore(agent-os): add web repo as git submodule for AI reference
- Add .agent-os/web-repo as a git submodule pointing to verse-mate/verse-mate repository
- Update .gitignore to exclude the web repo submodule folder
- Document web repo submodule usage and setup instructions in CLAUDE.md
- Explain purpose for AI assisted feature parity and mobile implementation reference
- Provide commands to initialize and update the submodule to the latest codebase

--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,9 @@ playwright/.cache/
 # Visual Reference Captures
 .agent-os/references/*
 
+# Web repo submodule
+.agent-os/web-repo/*
+
 app-example
 
 # generated native folders
