--- a/.maestro/swipe-navigation-test.yaml
+++ b/.maestro/swipe-navigation-test.yaml
@@ -1,13 +1,12 @@
 ---
-appId: com.versemate.mobile
+appId: org.versemate.mobile
 name: Swipe Navigation Test
 description: Tests chapter navigation via swipe gestures
 
 ---
 
 - launchApp:
-    appId: com.versemate.mobile
-    clearState: true
+    appId: org.versemate.mobile
 
 # Wait for Genesis 1 to load
 - assertVisible: "Genesis 1"
