--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "format": "biome format --write .",
     "lint": "biome check . && eslint .",
@@ -104,7 +104,7 @@
   "bun": {
     "test": {
       "preload": "./test-setup.ts",
-      "timeout": 1e4
+      "timeout": 10000
     }
   },
   "private": true
