chore(config): update ignore rules and lint scripts
- Add .agent-os/web-repo to biomeignore and eslint ignore patterns
- Add bugs.txt to .gitignore file
- Set "ignoreUnknown": false in biome.json configuration
- Restrict biome format, check, and fix scripts to specific directories in package.json
- Adjust lint scripts to run Biome checks on targeted folders only

--- a/biome.json
+++ b/biome.json
@@ -13,7 +13,8 @@
       "__tests__/**/*.{js,jsx,ts,tsx}",
       ".agent-os/references/**/*.{js,jsx,ts,tsx}",
       "*.{js,jsx,ts,tsx}"
-    ]
+    ],
+    "ignoreUnknown": false
   },
   "vcs": {
     "enabled": true,
