--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "format": "biome format --write .",
-    "lint": "biome check . && eslint .",
-    "lint:fix": "biome check --write . && eslint --fix .",
+    "format": "biome format --write app components hooks constants utils services types scripts __tests__",
+    "lint": "biome check app components hooks constants utils services types scripts __tests__ && eslint .",
+    "lint:fix": "biome check --write app components hooks constants utils services types scripts __tests__ && eslint --fix .",
     "type-check": "tsc --noEmit",
     "test": "cross-env EXPO_USE_STATIC_RENDERING=1 jest",
     "test:watch": "cross-env EXPO_USE_STATIC_RENDERING=1 jest --watch",
