feat: JWT-Based Authentication System (#17)
## Summary

Implements complete JWT authentication for VerseMate Mobile, including signup/login flows, secure token management, session persistence, and comprehensive test coverage.

---

## Features

### 🔐 Authentication Flow
- **Signup & Login Screens** - Modal-based auth with real-time validation
- **Session Management** - AuthContext with global state management
- **Token Persistence** - Secure storage using Expo SecureStore
- **Auto-Login** - Session restoration on app launch

### 🔄 Token Management
- **Dual Refresh Strategy**
  - Reactive: Automatic retry on 401 responses
  - Proactive: Background timer (15min) prevents expiration
- **HTTP Interceptors** - Automatic JWT injection in all API calls
- **Race Condition Prevention** - Mutex pattern for concurrent refreshes

### 🎨 UI Components
- `TextInput` - Secure text input with password show/hide toggle
- `PasswordRequirements` - Real-time validation feedback
- Enhanced `Button` - Loading states and accessibility

### 🛡️ Security
- ✅ Encrypted token storage (Expo SecureStore)
- ✅ Password validation (8+ chars, letter + number)
- ✅ Automatic logout on token expiration
- ✅ HTTPS-only API calls
- ✅ No password storage, only tokens

---

## What Changed

### New Files (24)
```
Authentication Core:
  app/auth/_layout.tsx              Auth modal layout
  app/auth/login.tsx                Login screen (253 lines)
  app/auth/signup.tsx               Signup screen (326 lines)
  contexts/AuthContext.tsx          Auth state management (270 lines)
  hooks/useLogin.ts                 Login mutation hook
  hooks/useSignup.ts                Signup mutation hook

Infrastructure:
  lib/auth/token-storage.ts         Secure token persistence
  lib/auth/token-refresh.ts         Dual refresh strategy
  lib/auth/password-validation.ts   Password validation logic
  lib/api/client-interceptors.ts    HTTP interceptors

UI Components:
  components/ui/TextInput.tsx       Secure text input (156 

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "test:watch": "cross-env EXPO_USE_STATIC_RENDERING=1 jest --watch",
     "test:coverage": "cross-env EXPO_USE_STATIC_RENDERING=1 jest --coverage",
     "test:ci": "cross-env EXPO_USE_STATIC_RENDERING=1 jest --ci --coverage --maxWorkers=2",
+    "test:slow": "cross-env EXPO_USE_STATIC_RENDERING=1 RUN_SLOW_TESTS=1 NODE_OPTIONS=--max-old-space-size=8192 jest --testPathPattern=\\.slow\\. --no-coverage",
     "storybook:generate": "sb-rn-get-stories",
     "chromatic:deploy": "chromatic --build-script-name storybook:generate",
     "maestro:test": "maestro test .maestro",
@@ -53,6 +54,7 @@
     "expo-system-ui": "~6.0.7",
     "expo-updates": "~29.0.12",
     "expo-web-browser": "~15.0.8",
+    "jwt-decode": "^4.0.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
@@ -104,7 +106,7 @@
   "bun": {
     "test": {
       "preload": "./test-setup.ts",
-      "timeout": 10000
+      "timeout": 1e4
     }
   },
   "private": true
