--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,9 @@ playwright/.cache/
 # Visual Reference Captures
 .agent-os/references/*
 
+# Web repo submodule
+.agent-os/web-repo/*
+
 app-example
 
 # generated native folders
@@ -74,3 +77,4 @@ build_output.json
 # Deployment build artifacts
 .deployment/build_id.txt
 .deployment/build_id_production_*.txt
+bugs.txt
