--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "@types/react": "~19.1.0",
     "@types/react-test-renderer": "^19.1.0",
     "ajv": "^8.17.1",
+    "baseline-browser-mapping": "^2.8.30",
     "chromatic": "^13.3.0",
     "cross-env": "^10.1.0",
     "eslint": "^9.25.0",
@@ -109,7 +110,7 @@
   "bun": {
     "test": {
       "preload": "./test-setup.ts",
-      "timeout": 1e4
+      "timeout": 10000
     }
   },
   "private": true
