feat(theme): add sunrise_sunset theme preference with location-based switching
- Introduce 'sunrise_sunset' option to switch theme based on user's local sunrise and sunset times
- Integrate expo-location to request location permission and retrieve current coordinates
- Use suncalc to calculate sunrise and sunset times for current location and time
- Update theme mode every minute when 'sunrise_sunset' preference is selected to reflect time changes
- Implement fallback to light mode if location permission is denied or location unavailable
- Extend ThemePreference type and context logic to handle new preference
- Add corresponding descriptions and options in ThemeSelector component
- Add extensive tests covering new preference behavior, transitions, permission handling, and error cases
- Add expo-location and suncalc dependencies with types and configure app permissions accordingly
- Adjust SettingsScreen to reposition ThemeSelector component without changing visual order

--- a/app.json
+++ b/app.json
@@ -80,6 +80,12 @@
             "backgroundColor": "#000000"
           }
         }
+      ],
+      [
+        "expo-location",
+        {
+          "locationWhenInUsePermission": "Allow Verse Mate to determine sunrise and sunset times for automatic theme switching."
+        }
       ]
     ],
     "experiments": {
