--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.9",
     "expo-linking": "~8.0.8",
+    "expo-location": "^19.0.7",
     "expo-router": "~6.0.12",
     "expo-sharing": "^14.0.7",
     "expo-splash-screen": "~31.0.10",
@@ -67,7 +68,8 @@
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "~4.16.0",
     "react-native-web": "~0.21.0",
-    "react-native-worklets": "0.5.1"
+    "react-native-worklets": "0.5.1",
+    "suncalc": "^1.9.0"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.2.4",
@@ -85,6 +87,7 @@
     "@types/jest": "^29.5.0",
     "@types/react": "~19.1.0",
     "@types/react-test-renderer": "^19.1.0",
+    "@types/suncalc": "^1.9.2",
     "ajv": "^8.17.1",
     "baseline-browser-mapping": "^2.8.30",
     "chromatic": "^13.3.0",
@@ -110,7 +113,7 @@
   "bun": {
     "test": {
       "preload": "./test-setup.ts",
-      "timeout": 10000
+      "timeout": 1e4
     }
   },
   "private": true
