--- a/app.json
+++ b/app.json
@@ -30,6 +30,9 @@
       },
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false,
+      "statusBar": {
+        "translucent": true
+      },
       "intentFilters": [
         {
           "action": "VIEW",
