--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "expo-image": "~3.0.9",
     "expo-linking": "~8.0.8",
     "expo-location": "^19.0.7",
+    "expo-navigation-bar": "^5.0.9",
     "expo-router": "~6.0.12",
     "expo-sensors": "^15.0.7",
     "expo-sharing": "^14.0.7",
