Feature/dark mode (#31)
* feat(theme): implement dark mode foundation and initial migrations

- Added dark color palette with 25+ semantic colors supporting light and dark themes
- Created ThemeContext with AsyncStorage persistence and system preference sync
- Wrapped app with custom ThemeProvider integrated with React Navigation themes
- Migrated Settings screen to support theme selection and dynamic theme-aware styling
- Migrated main Bible Chapter screen header and icons to theme-aware colors and styles
- Updated Bible components ProgressBar and SkeletonLoader to support theming
- Added new ThemeSelector component for user theme preference selection in Settings
- Documented dark mode implementation status, session summary, and migration patterns
- Improved splash screen handling to wait for theme loading before hiding
- Applied theme-aware styles replacing static color tokens throughout migrated components

* refactor(theme): complete dark mode migration and apply theme to components

- Mark dark mode migration as complete in documentation with summary of all phases finished
- Update Login and Signup screens to use theme colors dynamically via useTheme hook
- Refactor Bookmarks and Highlights screens to use theme-aware colors and styles with useMemo
- Modify Index loading view to respond to current theme colors
- Replace hardcoded color constants with theme tokens for consistent theming across UI
- Adjust stylesheets to be functions of colors object for better theme adaptability
- Update contrast ratio tests to align with theme-based color references

* test(settings): add comprehensive tests for Settings screen and improve test integration

- Wrap Settings and related auth/login/signup components with ThemeProvider in tests
- Add tests for unauthenticated and authenticated states of Settings screen
- Verify rendering of theme selector, Bible version picker, and profile sections conditionally
- Test profile form population, change detection, and save behavior wit

--- a/app.json
+++ b/app.json
@@ -30,6 +30,9 @@
       },
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false,
+      "statusBar": {
+        "translucent": true
+      },
       "intentFilters": [
         {
           "action": "VIEW",
@@ -79,6 +82,12 @@
           "dark": {
             "backgroundColor": "#000000"
           }
+        }
+      ],
+      [
+        "expo-location",
+        {
+          "locationWhenInUsePermission": "Allow Verse Mate to determine sunrise and sunset times for automatic theme switching."
         }
       ]
     ],
