--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-native": "0.81.4",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-markdown-display": "^7.0.2",
+    "react-native-modal": "^14.0.0-rc.1",
     "react-native-pager-view": "^6.9.1",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "^5.6.1",
