--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "logout": "expo logout",
     "format": "biome format --write app components hooks constants utils types scripts __tests__",
     "lint": "biome check app components hooks constants utils types scripts __tests__ && eslint .",
     "lint:fix": "biome check --write app components hooks constants utils types scripts __tests__ && eslint --fix .",
@@ -31,47 +30,47 @@
     "validate": "bun run lint && bun run type-check && bun run test"
   },
   "dependencies": {
-    "@expo/vector-icons": "^15.0.2",
+    "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/datetimepicker": "8.4.4",
     "@react-native-community/netinfo": "^11.4.1",
-    "@react-native-community/slider": "^5.1.1",
+    "@react-native-community/slider": "5.0.1",
     "@react-native-google-signin/google-signin": "^16.0.0",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "@tanstack/react-query": "^5.90.2",
     "axios": "^1.12.2",
-    "expo": "54.0.13",
+    "expo": "~54.0.26",
     "expo-apple-authentication": "^8.0.7",
     "expo-application": "^7.0.7",
     "expo-clipboard": "^8.0.7",
-    "expo-constants": "~18.0.9",
-    "expo-dev-client": "^6.0.16",
+    "expo-constants": "~18.0.10",
+    "expo-dev-client": "~6.0.19",
     "expo-device": "^8.0.9",
     "expo-file-system": "^19.0.19",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
-    "expo-image": "~3.0.9",
-    "expo-linking": "~8.0.8",
+    "expo-image": "~3.0.10",
+    "expo-linking": "~8.0.9",
     "expo-localization": "^17.0.7",
     "expo-location": "^19.0.7",
     "expo-navigation-bar": "^5.0.9",
-    "expo-router": "~6.0.12",
+    "expo-router": "~6.0.16",
     "expo-sensors": "^15.0.7",
     "expo-sharing": "^14.0.7",
-    "expo-splash-screen": "~31.0.10",
+    "expo-splash-screen": "~31.0.11",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
-    "expo-system-ui": "~6.0.7",
-    "expo-updates": "~29.0.12",
-    "expo-web-browser": "~15.0.8",
+    "expo-system-ui": "~6.0.8",
+    "expo-updates": "~29.0.14",
+    "expo-web-browser": "~15.0.9",
     "jwt-decode": "^4.0.0",
     "posthog-react-native": "^4.13.0",
     "posthog-react-native-session-replay": "^1.2.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-native": "0.81.4",
+    "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-markdown-display": "^7.0.2",
     "react-native-modal": "^14.0.0-rc.1",
@@ -79,6 +78,7 @@
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
     "suncalc": "^1.9.0"
@@ -109,7 +109,7 @@
     "eslint-config-expo": "~10.0.0",
     "husky": "^9.1.7",
     "jest": "~29.7.0",
-    "jest-expo": "^54.0.12",
+    "jest-expo": "~54.0.13",
     "lint-staged": "^16.1.6",
     "msw": "^2.11.3",
     "react-test-renderer": "19.1.0",
