--- a/package.json
+++ b/package.json
@@ -41,30 +41,30 @@
     "@react-navigation/native": "^7.1.8",
     "@tanstack/react-query": "^5.90.2",
     "axios": "^1.12.2",
-    "expo": "~54.0.26",
-    "expo-apple-authentication": "^8.0.7",
-    "expo-application": "^7.0.7",
-    "expo-clipboard": "^8.0.7",
-    "expo-constants": "~18.0.10",
-    "expo-dev-client": "~6.0.19",
-    "expo-device": "^8.0.9",
-    "expo-file-system": "^19.0.19",
-    "expo-font": "~14.0.9",
-    "expo-haptics": "~15.0.7",
-    "expo-image": "~3.0.10",
-    "expo-linking": "~8.0.9",
-    "expo-localization": "^17.0.7",
-    "expo-location": "^19.0.7",
-    "expo-navigation-bar": "^5.0.9",
-    "expo-router": "~6.0.16",
-    "expo-sensors": "^15.0.7",
-    "expo-sharing": "^14.0.7",
-    "expo-splash-screen": "~31.0.11",
-    "expo-status-bar": "~3.0.8",
-    "expo-symbols": "~1.0.7",
-    "expo-system-ui": "~6.0.8",
+    "expo": "~54.0.27",
+    "expo-apple-authentication": "~8.0.8",
+    "expo-application": "~7.0.8",
+    "expo-clipboard": "~8.0.8",
+    "expo-constants": "~18.0.11",
+    "expo-dev-client": "~6.0.20",
+    "expo-device": "~8.0.10",
+    "expo-file-system": "~19.0.20",
+    "expo-font": "~14.0.10",
+    "expo-haptics": "~15.0.8",
+    "expo-image": "~3.0.11",
+    "expo-linking": "~8.0.10",
+    "expo-localization": "~17.0.8",
+    "expo-location": "~19.0.8",
+    "expo-navigation-bar": "~5.0.10",
+    "expo-router": "~6.0.17",
+    "expo-sensors": "~15.0.8",
+    "expo-sharing": "~14.0.8",
+    "expo-splash-screen": "~31.0.12",
+    "expo-status-bar": "~3.0.9",
+    "expo-symbols": "~1.0.8",
+    "expo-system-ui": "~6.0.9",
     "expo-updates": "~29.0.14",
-    "expo-web-browser": "~15.0.9",
+    "expo-web-browser": "~15.0.10",
     "jwt-decode": "^4.0.0",
     "posthog-react-native": "^4.13.0",
     "posthog-react-native-session-replay": "^1.2.3",
@@ -109,7 +109,7 @@
     "eslint-config-expo": "~10.0.0",
     "husky": "^9.1.7",
     "jest": "~29.7.0",
-    "jest-expo": "~54.0.13",
+    "jest-expo": "~54.0.14",
     "lint-staged": "^16.1.6",
     "msw": "^2.11.3",
     "react-test-renderer": "19.1.0",
