--- a/app.json
+++ b/app.json
@@ -56,7 +56,7 @@
             {
               "scheme": "https",
               "host": "app.versemate.org",
-              "pathPrefix": "/bible"
+              "pathPrefix": "/topic"
             }
           ],
           "category": [
