chore(env): add web URL config and update gitignore
- Added EXPO_PUBLIC_WEB_URL for deep linking configuration in .env.example
- Updated .gitignore to exclude .env files for security reasons

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,9 @@
 # API Configuration
 EXPO_PUBLIC_API_URL=https://api.verse-mate.apegro.dev
 
+# Web URL Configuration (Deep Linking)
+EXPO_PUBLIC_WEB_URL=https://app.versemate.org
+
 # PostHog Analytics Configuration
 # Get your PostHog API key from: https://app.posthog.com/project/settings
 EXPO_PUBLIC_POSTHOG_KEY=phc_your_project_api_key_here
