fix(chapter-reader): add long-press highlight creation on verses
- Implement handleVerseLongPress to create new highlights on verse long press
- Trigger selection context and show selection sheet on long press
- Add onVerseLongPress prop to verse UI components
- Change paragraph and single verse handlers from onLongPress to onPress for better gesture handling

fix(dictionary): gracefully handle missing native module in Expo Go

- Wrap requireNativeModule call in try-catch to avoid crashes
- Log info when native dictionary module is unavailable for better debugging
- Support graceful degradation on platforms lacking native dictionary (Expo Go and web)

--- a/app.json
+++ b/app.json
@@ -10,6 +10,7 @@
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
+      "icon": "./assets/images/ios-icon.png",
       "bundleIdentifier": "org.versemate.mobile",
       "supportsTablet": true,
       "associatedDomains": [
@@ -24,7 +25,7 @@
       "package": "org.versemate.mobile",
       "adaptiveIcon": {
         "backgroundColor": "#E6F4FE",
-        "foregroundImage": "./assets/images/android-icon-foreground.png",
+        "foregroundImage": "./assets/images/temp_icon.png",
         "backgroundImage": "./assets/images/android-icon-background.png",
         "monochromeImage": "./assets/images/android-icon-monochrome.png"
       },
