--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "verse-mate-mobile",
+    "name": "VerseMate",
     "slug": "verse-mate-mobile",
     "owner": "versemate",
     "version": "0.1.0",
@@ -25,7 +25,7 @@
       "package": "org.versemate.mobile",
       "adaptiveIcon": {
         "backgroundColor": "#E6F4FE",
-        "foregroundImage": "./assets/images/temp_icon.png",
+        "foregroundImage": "./assets/images/ios-icon.png",
         "backgroundImage": "./assets/images/android-icon-background.png",
         "monochromeImage": "./assets/images/android-icon-monochrome.png"
       },
