feat: Update app orientation to default and adjust split view breakpoint for improved landscape support

--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "verse-mate-mobile",
     "owner": "versemate",
     "version": "0.1.0",
-    "orientation": "portrait",
+    "orientation": "default",
     "icon": "./assets/images/icon.png",
     "scheme": "versemate",
     "userInterfaceStyle": "automatic",
