feat: Update Android adaptive icon and add new splash icon

--- a/app.json
+++ b/app.json
@@ -25,7 +25,7 @@
       "package": "org.versemate.mobile",
       "adaptiveIcon": {
         "backgroundColor": "#E6F4FE",
-        "foregroundImage": "./assets/images/ios-icon.png",
+        "foregroundImage": "./assets/images/android-icon.png",
         "backgroundImage": "./assets/images/android-icon-background.png",
         "monochromeImage": "./assets/images/android-icon-monochrome.png"
       },
