feat: change Android build type from apk to app-bundle

--- a/eas.json
+++ b/eas.json
@@ -32,7 +32,7 @@
         "buildConfiguration": "Release"
       },
       "android": {
-        "buildType": "apk",
+        "buildType": "app-bundle",
         "gradleCommand": ":app:assembleRelease"
       },
       "env": {
