--- a/eas.json
+++ b/eas.json
@@ -33,7 +33,7 @@
       },
       "android": {
         "buildType": "app-bundle",
-        "gradleCommand": ":app:assembleRelease"
+        "gradleCommand": ":app:bundleRelease"
       },
       "env": {
         "APP_ENV": "preview",
